--- a/member-mst.html
+++ b/member-mst.html
@@ -98,329 +98,329 @@
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
                     <td>宮城古川</td>
                     <td>正会員</td>
                     <td class="td-name">
-                      <a href="">池上 悦生</a>
+                      <a href="">xxxx xxxx</a>
                     </td>
-                    <td>株式会社 夢工房</td>
+                    <td>株式会社 xxxx</td>
                   </tr>
                 </tbody>
               </table>
@@ -780,7 +780,7 @@
                   <div class="member-info__form-group-zip-code">
                     <label class="title">最終更新担当</label>
                     <div class="content">
-                      <div>佐々木 孝徳</div>
+                      <div>xxxx xxxx</div>
                       <div>宮城古川</div>
                     </div>
                   </div>
@@ -871,7 +871,7 @@
                 </div>
                 <div class="my-venue-content__name">
                   <div class="my-venue">宮城古川</div>
-                  <div class="name">池上悦生</div>
+                  <div class="name">xxxx xxxx</div>
                   <div class="member-type">正会員</div>
                 </div>
                 <table>
@@ -908,7 +908,7 @@
                 </div>
                 <div class="other-venue-content__name">
                   <div class="other-venue">宮城古川</div>
-                  <div class="name">池上悦生</div>
+                  <div class="name">xxxx xxxx</div>
                   <div class="member-type">正会員</div>
                 </div>
                 <table>
