--- a/member-mst.html
+++ b/member-mst.html
@@ -41,7 +41,7 @@
               <label for="venue">所属会場</label>
               <select name="" id="venue" class="select-common">
                 <option hidden>選択してください</option>
-                <option value="">宮城古川</option>
+                <option value="">xxxx</option>
               </select>
               <div class="err-msg"></div>
             </div>
@@ -95,7 +95,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -103,7 +103,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -111,7 +111,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -119,7 +119,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -127,7 +127,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -135,7 +135,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -143,7 +143,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -151,7 +151,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -159,7 +159,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -167,7 +167,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -175,7 +175,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -183,7 +183,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -191,7 +191,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -199,7 +199,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -207,7 +207,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -215,7 +215,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -223,7 +223,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -231,7 +231,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -239,7 +239,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -247,7 +247,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -255,7 +255,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -263,7 +263,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -271,7 +271,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -279,7 +279,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -287,7 +287,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -295,7 +295,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -303,7 +303,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -311,7 +311,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -319,7 +319,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -327,7 +327,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -335,7 +335,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -343,7 +343,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -351,7 +351,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -359,7 +359,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -367,7 +367,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -375,7 +375,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -383,7 +383,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -391,7 +391,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -399,7 +399,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -407,7 +407,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -415,7 +415,7 @@
                     <td>株式会社 xxxx</td>
                   </tr>
                   <tr>
-                    <td>宮城古川</td>
+                    <td>xxxx</td>
                     <td>正会員</td>
                     <td class="td-name">
                       <a href="">xxxx xxxx</a>
@@ -451,7 +451,7 @@
                       <span class="member-info__form-required-item">必須</span>
                     </label>
                     <select class="content" name="" id="md-venue" required>
-                      <option value="">宮城古川</option>
+                      <option value="">xxxx</option>
                     </select>
                     <div class="err-msg">エラーメッセージ</div>
                   </div>
@@ -781,7 +781,7 @@
                     <label class="title">最終更新担当</label>
                     <div class="content">
                       <div>xxxx xxxx</div>
-                      <div>宮城古川</div>
+                      <div>xxxx</div>
                     </div>
                   </div>
 
@@ -870,7 +870,7 @@
                   自会場出席実績
                 </div>
                 <div class="my-venue-content__name">
-                  <div class="my-venue">宮城古川</div>
+                  <div class="my-venue">xxxx</div>
                   <div class="name">xxxx xxxx</div>
                   <div class="member-type">正会員</div>
                 </div>
@@ -907,7 +907,7 @@
                   他会場出席実績
                 </div>
                 <div class="other-venue-content__name">
-                  <div class="other-venue">宮城古川</div>
+                  <div class="other-venue">xxxx</div>
                   <div class="name">xxxx xxxx</div>
                   <div class="member-type">正会員</div>
                 </div>
