--- a/member-mst.html
+++ b/member-mst.html
@@ -923,7 +923,7 @@
                   <tbody>
                     <tr>
                       <td>2022/10/12</td>
-                      <td>仙台伊達</td>
+                      <td>xxxx</td>
                       <td>第２回例会</td>
                       <td>出席</td>
                     </tr>
@@ -931,7 +931,7 @@
                   <tbody>
                     <tr>
                       <td>2022/10/12</td>
-                      <td>仙台青葉</td>
+                      <td>xxxx</td>
                       <td>第２回例会</td>
                       <td>出席</td>
                     </tr>
