--- a/member-mst.html
+++ b/member-mst.html
@@ -448,7 +448,7 @@
                   <div class="member-info__form-group">
                     <label class="title" for="md-venue"
                       >所属会場<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <select class="content" name="" id="md-venue" required>
                       <option value="">xxxx</option>
@@ -459,7 +459,7 @@
                   <div class="member-info__form-group-radio">
                     <label class="title"
                       >会員種別<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <div class="content">
                       <input
@@ -486,7 +486,7 @@
                   <div class="member-info__form-group">
                     <label class="title" for="md-name"
                       >お名前<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <input
                       type="text"
@@ -510,7 +510,7 @@
                   <div class="member-info__form-group">
                     <label class="title" for="md-kana"
                       >お名前カナ<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <input
                       type="text"
@@ -526,7 +526,7 @@
                   <div class="member-info__form-group">
                     <label class="title" for="md-email"
                       >メールアドレス<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <input
                       type="email"
@@ -556,7 +556,7 @@
                   <div class="member-info__form-group">
                     <label class="title" for="md-tell"
                       >電話番号<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <input
                       type="text"
@@ -572,7 +572,7 @@
                   <div class="member-info__form-group">
                     <label class="title" for="md-company-name"
                       >会社名<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <input
                       type="text"
@@ -588,7 +588,7 @@
                   <div class="member-info__form-group">
                     <label class="title" for="md-position"
                       >役職<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <input
                       type="text"
@@ -603,7 +603,7 @@
                   <div class="member-info__form-group">
                     <label class="title" for="md-business-details">
                       事業内容<br />
-                      <span class="member-info__form-required-item">必須</span>
+                      <span class="form-required-item">必須</span>
                     </label>
                     <textarea
                       class="content"
@@ -786,12 +786,12 @@
                   </div>
 
                   <div class="member-info__form-group-buttons">
-                    <button class="btn-clear">クリア</button>
-                    <button class="btn-registration">登録</button>
-                    <button class="btn-unsubscribe">
+                    <button class="btn btn-clear">クリア</button>
+                    <button class="btn btn-registration">登録</button>
+                    <button class="btn-with-a btn-unsubscribe">
                       <a href="#modal-01"> 退会 </a>
                     </button>
-                    <button class="btn-deleated">削除</button>
+                    <button class="btn btn-deleated">削除</button>
                   </div>
                 </form>
 
@@ -820,8 +820,7 @@
                           </div>
                           <div class="member-info__form-group">
                             <label class="title" for="md-unsubscribe-day"
-                              >退会年月日<br /><span
-                                class="member-info__form-required-item"
+                              >退会年月日<br /><span class="form-required-item"
                                 >必須</span
                               ></label
                             >
@@ -849,10 +848,10 @@
                           <div
                             class="member-info__form-group-buttons unsubscribe-buttons"
                           >
-                            <button class="btn-unsubscribe-update">
+                            <button class="btn btn-unsubscribe-update">
                               退会更新
                             </button>
-                            <button class="btn-cancel">キャンセル</button>
+                            <button class="btn btn-cancel">キャンセル</button>
                           </div>
                         </form>
                       </div>
